Fixed flicker between pages

--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ body {
 /* --- 4. Page/View Specific Styles --- */
 
 /* Menu Page */
-#challenge-menu {
+#challenge-menu, #loader {
     padding: 30px;
     max-width: 800px;
     margin: 40px auto;
@@ -233,7 +233,7 @@ body {
     list-style: none;
     padding: 0;
 }
-#challenge-list li {
+#challenge-list li, #loader {
     background: var(--text-light);
     margin-bottom: 15px;
     border-radius: 8px;
@@ -244,7 +244,7 @@ body {
     transform: translateY(-3px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.15);
 }
-#challenge-list button {
+#challenge-list button{
     background: none;
     border: none;
     width: 100%;
